# OSD

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clion_main.cpp  copy.sh  copyoutofsd.sh  createsd.sh  kernel.cpp  kernel.h  main.cpp  run64.sh  run64linux.sh
Applications/: Clock  Clock.daric  Clock.h  Clock3  Fonts  Graphics2d  Mandelbrot  Mandelbrot.daric  Mandelbrot.h  Raytracer  Sierpinski  Tester  Tester.daric  Tester.h
Chrono/: Chrono.cpp  Chrono.h
Compiler/: Compiler.h
Compiler/Breakdown/: Breakdown.cpp  Breakdown.h
Compiler/Exception/: DARICException.h
Compiler/IRCompiler/: IRAssignment.cpp  IRCase.cpp  IRComparison.cpp  IRCompiler.cpp  IRCompiler.h  IRConversion.cpp  IRData.cpp  IRFor.cpp  IRIf.cpp  IROpcodes.h  IROptimiser.cpp  IRPrint.cpp  IRPrinter.cpp  IRRepeat.cpp  IRVariables.cpp
Compiler/Lightning/: jit_arm.c  jit_size.c  lightning_orig.c
Compiler/NativeCompiler/: Disassemble.cpp  NativeCompiler.cpp  NativeCompiler.h
Compiler/Parser/: Parser.cpp  Parser.h  ParserExpression.cpp  Parser_CASE.cpp  Parser_CONST.cpp  Parser_IF.cpp  Parser_PRINT.cpp  Parser_PROCCall.cpp  Parser_REPEAT.cpp  Parser_TYPE.cpp
Compiler/Tokeniser/: Tokeniser.cpp  Tokeniser.h  TokeniserPrinter.cpp  TokeniserString.cpp  TokeniserSymbol.cpp  TokeniserText.cpp  Tokens.h
Compiler/capstone/: cs.c
Concurrent/: concurrentqueue.h
Config/: FontManager  FontManager.txt
Editor/: Editor.cpp  Editor.h
Exception/: DARICException.h
GUI/: KeyboardCodes.h  Style.cpp  Style.h  TermColor.h  TerminalOutput.h  Window.cpp  Window.h  lvgl.cpp  lvgl.h
GUI/Controls/: Canvas.cpp  Canvas.h  Control.cpp  Control.h
GUI/Fonts/: lato_16.c  open_sans_16.c  plex_mono_16.c  plex_sans_10.c  plex_sans_12.c  plex_sans_14.c  plex_sans_16.c  plex_sans_18.c  plex_sans_20.c  plex_serif_16.c  roboto_16.c  symbols_12.c
GUI/Window/: LVGLWindow.cpp  LVGLWindow.h  Window.cpp  Window.h
IRCompiler/: IRAssignment.cpp  IRBoolean.cpp  IRCase.cpp  IRComparison.cpp  IRCompiler.cpp  IRCompiler.h  IRConversion.cpp  IRData.cpp  IRDefs.cpp  IRFor.cpp  IRIf.cpp  IRLiteral.cpp  IRMaths.cpp  IROpcodes.h  IROptimiser.cpp  IRPrint.cpp  IRPrinter.cpp  IRRepeat.cpp  IRString.cpp  IRVariables.cpp  IRWhile.cpp
Input/: Input.cpp  Input.h
Lightning/: jit_aarch64.c  jit_private.h  lightning.c  lightning.h  lightning_orig.c
NativeCompiler/: Disassemble.cpp  Functions.h  LibChrono.cpp  LibData.cpp  LibGeneral.cpp  LibGraphics2D.cpp  LibKeyboardMouse.cpp  LibMaths.cpp  LibPrint.cpp  LibRandom.cpp  LibString.cpp  NativeCompiler.cpp  NativeCompiler.h  NativeStack.cpp
OS/: Breakdown.cpp  Breakdown.h  OS.cpp  OS.h  OS_Includes.h  OS_Messages.h  OS_Strings.cpp  OS_Tasks.cpp  OS_Tasks.h  OS_Tasks_Code.cpp  OS_Tasks_Code.h  OS_Tasks_Compile.cpp  OS_Tasks_Data.cpp  OS_Tasks_Data.h  OS_Tasks_GUI.cpp  OS_Tasks_GUI.h  OS_Tasks_Memory.cpp  OS_Tasks_Memory.h  OS_Tasks_Strings.cpp  OS_Tasks_Strings.h  Types.h
Parser/: Parser.cpp  Parser.h  ParserExpression.cpp  Parser_Assignment.cpp  Parser_CASE.cpp  Parser_DATA.cpp  Parser_DEF.cpp  Parser_FOR.cpp  Parser_IF.cpp  Parser_PROCCall.cpp  Parser_REPEAT.cpp  Parser_SWAP.cpp  Parser_TYPE.cpp  Parser_WHILE.cpp
Tasks/: DARICWindow.cpp  DARICWindow.h  Desktop.cpp  GUI.cpp  GUI.h  Kernel.cpp  Kernel.h  TasksWindow.cpp  TasksWindow.h  WindowManager.cpp  WindowManager.h  mouse.h
Tasks/Editor/: Editor.cpp  Editor.h
Tasks/FileManager/: FileManager.cpp  FileManager.h  FileSystemObject.h
Tasks/Filer/: Filer.cpp  Filer.h
Tasks/FontManager/: FontManager.cpp  FontManager.h  InstalledFonts.h
Tasks/IconBar/: IconBar.cpp  IconBar.h
Tasks/InputManager/: InputManager.cpp  InputManager.h
Tasks/Menu/: Menu.cpp  Menu.h
Tasks/System/FileManager/: FileManager.cpp  FileManager.h  FileSystemObject.h
Tasks/System/Filer/: Filer.cpp  Filer.h
Tasks/System/FontManager/: FontManager.cpp  FontManager.h
Tasks/System/IconBar/: IconBar.cpp  IconBar.h
Tasks/System/InputManager/: InputManager.cpp  InputManager.h  InputManagerObject.h  InputManagerStruct.h
Tasks/System/Menu/: Menu.cpp  Menu.h
Tasks/System/TasksWindow/: TasksWindow.cpp  TasksWindow.h
Tasks/System/WindowManager/: Style.cpp  Style.h  WindowManager.cpp  WindowManager.h
Tasks/System/WindowManager/canvas/: Canvas.cpp  Canvas.h
Tasks/System/WindowManager/controls/: Control.cpp  (+1 more)
Tasks/TasksWindow/: TasksWindow.cpp  TasksWindow.h
Tasks/WindowManager/: Desktop.cpp  Desktop.h  Style.cpp  Style.h  WindowManager.cpp  WindowManager.h
Tokeniser/: Tokeniser.cpp  Tokeniser.h  TokeniserNumber.cpp  TokeniserPrinter.cpp  TokeniserSymbol.cpp  TokeniserText.cpp  Tokens.h  Types.h
clion/: .gitignore  CMakeLists.txt  conanfile.txt  graph_info.json  ir.txt  main.cpp  native.txt  scratch.txt  tokeniser.txt  tokens.txt
(+13 files in other folders)
